# testYadro

./: .gitignore  CMakeLists.txt  README.md  config.ini  generate.py  view.py
src/: main.cc
src/impl/: common.cc  common.hh  config.cc  config.hh  io.hh  itape.hh  sort.hh  tape.hh
tests/: test_input1.tape  test_input2.tape  test_output1.tape  test_output2.tape  tests-main.cc
